# grpc-example

./: .pre-commit-config.yaml  mypy.ini  pyproject.toml
src/: Makefile
src/message/: message_pb2.py
src/protos/: message.proto  range_generator.proto  square.proto  sum.proto  sum_stream.proto
src/streams/bidirectional_streaming/: client.py  server.py  square_pb2.py  square_pb2_grpc.py
src/streams/client_streaming/: client.py  server.py  sum_stream_pb2.py  sum_stream_pb2_grpc.py
src/streams/server_streaming/: client.py  range_generator_pb2.py  range_generator_pb2_grpc.py  server.py
src/streams/unary/: client.py  server.py  sum_pb2.py  sum_pb2_grpc.py
tests/: test_message.py
