[tool.poetry]
name = "grpc-example"
version = "0.1.0"
description = ""
authors = ["ovsds <ovsds@yandex-team.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "^1.47.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
pytest = "^7.1.2"
grpcio-tools = "^1.47.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.pyupgrade]
py310-plus = true

[tool.isort]
py_version = 310
line_length = 120
profile = "black"
